Scrollbar fixed

--- a/css/default.css
+++ b/css/default.css
@@ -8,6 +8,10 @@
 }
 
 ::-webkit-scrollbar {
+    display: none;
+}
+
+::-webkit-scrollbar {
     width: 0%;
 }
 
